--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,40 @@
-fastapi
-uvicorn[standard]
-pydantic
-numpy
-pandas
-torch
-scikit-learn
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.0
+click==8.3.1
+exceptiongroup==1.3.1
+fastapi==0.123.0
+filelock==3.20.0
+fsspec==2025.10.0
+h11==0.16.0
+httptools==0.7.1
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.2
+MarkupSafe==3.0.3
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.6
+pandas==2.3.3
+pip==25.3
+pydantic==2.12.5
+pydantic_core==2.41.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+scikit-learn==1.7.2
+scipy==1.15.3
+setuptools==63.2.0
+six==1.17.0
+starlette==0.50.0
+sympy==1.14.0
+threadpoolctl==3.6.0
+torch==2.9.1
+typing_extensions==4.15.0
+typing-inspection==0.4.2
+tzdata==2025.2
+uvicorn==0.38.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==15.0.1
